lab_01: измененно единственное число на множественное
