# src/Controllers/ServerController.cs
@@ -11,7 +11,7 @@ using System.Linq;
 
 namespace ServerING.Controllers {
     [ApiController]
-    [Route("/api/v1/server")]
+    [Route("/api/v1/servers")]
     public class ServerController : Controller {
         private IServerService serverService;
 
